build: kotlin 2.2.21 로 다운
  - vertx-sqlclient-example 컴파일 시 hang 걸리는 문제 해결
  - Kotlin 2.3 부터 제공하는 Uuid 수형 예제 제외

Signed-off-by: debop <sunghyouk.bae@gmail.com>